fixed tags-editor flex wrap

--- a/src/sass/components/_tags-editor.scss
+++ b/src/sass/components/_tags-editor.scss
@@ -1,6 +1,7 @@
 .listTags {
 
     display: flex;
+    flex-wrap: wrap;
 
     &__tag {
         display: flex;
